# FODECC

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  docker-compose.prod.yml  manage.py  pyproject.toml
backend/config/: api.py  urls.py
backend/config/settings/: base.py  dev.py  docker.py  prod.py
backend/core/: apps.py  blocks.py  imageutils.py  models.py  signals.py
backend/core/management/commands/: assign_demo_images.py  bootstrap_demo.py  bootstrap_site.py  create_dev_superuser.py
backend/core/migrations/: 0001_initial.py
backend/deploy/: deploy.sh  entrypoint-prod.sh  init-letsencrypt.sh  init-server.sh  server-setup.md
backend/deploy/nginx/: default.conf
backend/home/: apps.py  models.py
backend/home/migrations/: 0001_initial.py  0002_homepage_hero_cta2_label_homepage_hero_cta2_url_and_more.py  0003_homepage_admin_name_homepage_admin_page_url_and_more.py  0004_alter_homepage_hero_video_url.py
backend/news/: models.py
backend/news/migrations/: 0001_initial.py
backend/search/: views.py
backend/standardpages/: apps.py  models.py
backend/standardpages/migrations/: 0001_initial.py  0002_alter_indexpage_header_image_and_more.py
docs/: arborescence-cible.md  architecture.md  content-model.md
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  (+1 more)
scripts/: migrate_content.py
(+33 files in other folders)
